# poker-game

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PLANO_REFATORACAO_BOTS.md  README.md  SECURITY.md  analise_pokerbotbase.md  debug_scores.py  migrate_memory.py  pyproject.toml  pyrightconfig.json  relatorio_100_partidas.md  relatorio_completo_100_partidas_20251124_191508.md  requirements-dev.txt  requirements.txt  test_100_games.py  test_allin_logic.py  test_blind_manager.py  test_final_solution.py  test_force_reimport.py  test_game_simulation.py  test_pokerkit_import.py  translations.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.json
data/: test_results_50_games.json
docs/: ALGORITHMS_DOCUMENTATION.md  ANALISE_HISTORICO_2025-11-23.md  ARQUITETURA_BOTS.md  BLIND_MANAGER.md  COMO_CRIAR_NOVO_BOT.md  DEBUGGING.md  DEBUG_PROBABILITY.md  DOCUMENTACAO_COMPLETA.md  FUNCIONAMENTO_BOTS.md  IMPLEMENTACAO_COMPLETA.md  INVESTIGACAO_PROXIMO_ROUND.md  MELHORIAS_IMPLEMENTADAS.md  README.md  SUGESTOES_MELHORIAS.md  relatorio_500_partidas.md
game/: __init__.py  blind_manager.py  game.py  game_advanced.py  play_console.py
players/: __init__.py  adaptive_player.py  aggressive_player.py  balanced_player.py  calculated_player.py  calm_player.py  cards_registry.py  cautious_player.py  conservative_aggressive_player.py  console_formatter.py  console_player.py  constants.py  fish_player.py  flexible_player.py  hand_evaluator.py  hand_utils.py  hybrid_player.py  learning_player.py  memory_utils.py  moderate_player.py  observant_player.py  opportunistic_player.py  patient_player.py  random_player.py  smart_player.py  steady_aggressive_player.py  steady_player.py  thoughtful_player.py  tight_player.py  win_probability_calculator.py
scripts/: upload_translations.py
tests/: test_100_games.py  test_100_games_comprehensive.py  test_50_games_fold_improvements.py  test_action_reaction.py  test_action_reaction_integration.py  test_bluff_analysis.py  test_bluff_analysis_complete.py  test_bluff_personality_values.py  test_final_solution.py  test_force_reimport.py  test_game_flow.py  test_game_simulation.py  test_human_allin.py  test_improvements.py  test_pokerkit_import.py  test_serialization.py  test_server.py  test_win_probability.py
utils/: __init__.py  action_analyzer.py  action_dataclasses.py  bet_sizing.py  cards_registry.py  console_formatter.py  constants.py  error_handling.py  game_history.py  hand_evaluator.py  hand_utils.py  memory_manager.py  opponent_registry.py  uuid_utils.py  (+3 more)
(+48 files in other folders)
